<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N7f-am-lEC">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main View Controller-->
        <scene sceneID="Uzm-kL-QEt">
            <objects>
                <viewController id="N7f-am-lEC" customClass="MainViewController" customModule="ci_bug" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="zqH-Gp-MVB">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="s0r-nj-gbq">
                                <rect key="frame" x="109.5" y="408" width="195" height="90"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqv-NS-owp">
                                        <rect key="frame" x="0.0" y="0.0" width="195" height="30"/>
                                        <state key="normal" title="Show Regular Message"/>
                                        <connections>
                                            <segue destination="0wI-vW-f1l" kind="presentation" id="1hm-bw-YMV"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90e-fr-e1G">
                                        <rect key="frame" x="0.0" y="30" width="195" height="30"/>
                                        <state key="normal" title="Show WKWebView Message"/>
                                        <connections>
                                            <segue destination="lHf-e4-m4X" kind="presentation" id="wrU-bF-n30"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vbh-eR-XfJ">
                                        <rect key="frame" x="0.0" y="60" width="195" height="30"/>
                                        <state key="normal" title="Show UIWebView Message"/>
                                        <connections>
                                            <segue destination="2aJ-F3-LFE" kind="presentation" id="ngN-Xu-kbA"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="s0r-nj-gbq" firstAttribute="centerY" secondItem="hOC-3X-YQ7" secondAttribute="centerY" id="cdv-mp-1OH"/>
                            <constraint firstItem="s0r-nj-gbq" firstAttribute="centerX" secondItem="hOC-3X-YQ7" secondAttribute="centerX" id="i2V-IE-UNN"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hOC-3X-YQ7"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bpP-pj-dUc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-481" y="-13"/>
        </scene>
        <!--Web View Controller-->
        <scene sceneID="DVx-cU-xeD">
            <objects>
                <viewController id="lHf-e4-m4X" customClass="WKWebViewController" customModule="ci_bug" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="JPb-EQ-ffJ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="NEw-Nt-8xQ"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Vz0-fa-u2C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="458" y="-183"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="Y4Z-Gr-loB">
            <objects>
                <viewController id="0wI-vW-f1l" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="2Ef-nA-wBk">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kmL-ZD-JjF">
                                <rect key="frame" x="158" y="394" width="98" height="20.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, World!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEr-vt-mAW">
                                        <rect key="frame" x="0.0" y="0.0" width="98" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="kmL-ZD-JjF" firstAttribute="centerY" secondItem="BRh-tk-60b" secondAttribute="centerY" id="2ZY-k7-7nm"/>
                            <constraint firstItem="kmL-ZD-JjF" firstAttribute="centerX" secondItem="BRh-tk-60b" secondAttribute="centerX" id="wYF-BT-MBx"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="BRh-tk-60b"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VRP-20-Jvm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="461" y="488"/>
        </scene>
        <!--Web View Controller-->
        <scene sceneID="x3c-it-hJl">
            <objects>
                <viewController id="2aJ-F3-LFE" customClass="UIWebViewController" customModule="ci_bug" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="yLi-55-tZ2">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="RHK-r3-RuU"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="RE3-cA-327" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1323" y="213"/>
        </scene>
    </scenes>
</document>
